# scroogle

./: README.md  pyproject.toml
scroogle/: __init__.py  api.py
