[tool.poetry]
name = "scroogle"
version = "0.1.0"
description = ""
authors = ["nhanb <nhan@nerdyweekly.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
ipython = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
